# matmul

./: .clang-format  .gitignore  CMakeLists.txt  README.md  plot.py  setup
benchmark/: CMakeLists.txt  benchmark.cpp  matmul_benchmark.cpp
data/: shapes.csv
include/: matmul.h  utils.h
mojo/: benchmark.mojo  kernel.mojo  kernel_explicit.mojo  matmul.mojo  mojoproject.toml  test.mojo
src/: CMakeLists.txt  kernel.h  matmul.cpp  utils.h
test/: CMakeLists.txt  matmul_test.cpp  test.cpp
